# public/api-docs/swagger.json
@@ -1672,45 +1672,27 @@
           "required": true,
           "example": "5948a1b8b2f3cc3c9572bc53"
         },
-        "reasonForLeaving": {
+        "feedback": {
           "type": "json",
           "required": true,
           "example": {
-            "comment": "valid",
-            "approved": true
+            "reasonForLeavingFeedback": "sdfa",
+            "reasonForLeavingApproved": true,
+            "strengthFeedback": "adf",
+            "strengthApproved": true,
+            "achievementApproved": true,
+            "achievementFeedback": "asdf",
+            "improvementApproved": true,
+            "improvementFeedback": "adsf",
+            "managementStyleApproved": true,
+            "managementStyleFeedback": "adsf",
+            "skillRatings": [{"name": "c++", "rate": 3}, {"name": "java", "rate": 3}, {"name": "node.js", "rate": 3}]
           }
         },
-        "strength": {
-          "type": "json",
+        "token": {
+          "type": "string",
           "required": true,
-          "example": {
-            "comment": "all strengths mentioned are valid as per my knowledge",
-            "approved": true
-          }
-        },
-        "improvement": {
-          "type": "json",
-          "required": true,
-          "example": {
-            "comment": "all improvements mentioned are valid as per my knowledge",
-            "approved": true
-          }
-        },
-        "achievement": {
-          "type": "json",
-          "required": true,
-          "example": {
-            "comment": "all achievements mentioned are valid as per my knowledge",
-            "approved": true
-          }
-        },
-        "management": {
-          "type": "json",
-          "required": true,
-          "example": {
-            "comment": "valid as per my knowledge",
-            "approved": true
-          }
+          "example": "0bf02150a12bf0742fff8d164238139e:d92b0825ff130268cdd05f071a164e84285f23852ba81cbc1ab4de3d1e3e2d4207cccdf27f3733760756658e475916557224118cdffeb930f87b595024fddba1d8c8ab95d14b656b84d03bfed0e5c6932fa4b64d65ea9c371b0144c8e185ac55"
         }
       }
     },
