# src/api/feedbacks.js
@@ -7,6 +7,7 @@ import resource from '../lib/resource-router';
 import applicationsService from '../services/applicationsService';
 import encryptDecryptService from '../services/encryptDecryptService';
 import jobsService from '../services/jobsService';
+import emailService from '../services/emailService';
 import Constants from '../constants';
 
 export default ({ app }) => resource({
@@ -15,68 +16,132 @@ export default ({ app }) => resource({
 	id: 'feedback',
 
 	/*
-	 POST /api/applications/{application}/feedback - Save referee feedback
+	 POST /api/applications/{application}/feedback - Save referee feedback, and
+	  /api/applications/{application}/feedback?requested_for=referee
+	  /api/applications/{application}/feedback?requested_for=recruiter
 	 */
-	async create({ params, body }, res) {
-		const decryptedToken = encryptDecryptService.decrypt(body.token);
-		if (decryptedToken === Constants.APPLICATION_NOT_FOUND) {
-			return res.status(401).json({
-				error: Constants.TOKEN_NOT_VALID,
-			});
-		}
-		const application = await applicationsService.addFeedback(app, params.application, body);
-		const candidateId = application.value && application.value.user_id;
-		const jobId = application.value && application.value.job_id;
-		let canContactReferences = 0;
-		const promiseArray = [];
-		promiseArray.push(app.models.token.update({
-			emailAddress: decryptedToken.emailAddress,
-			applicationId: decryptedToken.applicationId,
-		}, {
-			expired: true,
-		}));
-		promiseArray.push(app.models.profile.findOne({
-			where: { user: candidateId },
-			select: ['firstName', 'lastName', 'emailAddress'],
-		}));
-		if (_.get(application, 'value') && _.get(application, 'value.references_info')) {
-			let formStatus;
-			let referenceStatus;
-			const feedbacks = (_.get(application, 'value.feedback') && (_.size(application.value.feedback) + 1)) || 1;
-			application.value.references_info.forEach((reference) => {
-				if (reference.canContact === 'Yes') {
-					canContactReferences += 1;
+	async create({ params, query, body }, res) {
+		if (query && query.requested_for) {
+			if (query.requested_for === Constants.REFEREE) {
+				try {
+					const application = await app.models.application.update({
+						id: params.application,
+					}, { referee_feedback_requested: true });
+					const profileData = await app.models.profile.findOne({ user: application[0].user_id });
+					let refereesData = [];
+					application[0].references_info.forEach((reference) => {
+						if (reference && reference.canContact === 'Yes') {
+							refereesData.push(reference);
+						}
+					});
+					_.forOwn(application[0].feedback, (value) => {
+						refereesData = _.filter(refereesData, referee =>
+						referee.emailAddress !== value.userEmail,
+						);
+					});
+					const promiseArray = [];
+					const tokensArray = [];
+				// logic for sending emails to referees
+					for (let i = 0; i < refereesData.length; i += 1) {
+						const tokenObj = {
+							applicationId: params.application,
+							emailAddress: refereesData[i].emailAddress,
+						};
+						const buff = Buffer.from(JSON.stringify(tokenObj));
+						const token = encryptDecryptService.encrypt(buff);
+						const requestBody = {
+							appUrl: process.env.HOST ? 'http://welinktalent-client.herokuapp.com' : 'http://localhost:4200',
+							refereeEmail: refereesData[i].emailAddress,
+							refereeName: `${refereesData[i].firstName} ${refereesData[i].lastName}`,
+							candidateName: `${profileData.firstName} ${profileData.lastName}`,
+							token,
+						};
+						tokensArray.push({
+							applicationId: params.application,
+							emailAddress: refereesData[i].emailAddress,
+							token,
+							expired: false,
+						});
+						promiseArray.push(emailService.sendRefereeEmail(requestBody));
+					}
+					promiseArray.push(app.models.token.create(tokensArray));
+					Promise.all(promiseArray)
+					.then((emails) => {
+						console.log('emails sent to referees ', emails);
+					});
+				// end of logic for email
+					return res.json(application[0]);
+				} catch (e) {
+					res.json({ Error: e });
 				}
-			});
-			if (feedbacks < canContactReferences) {
-				formStatus = Constants.STATUS.COMPLETE;
-				referenceStatus = Constants.STATUS.REPLIED;
+			} else if (query.requested_for === Constants.RECRUITER) {
+				// TODO - functionality for sending email to recruiter in case of requested feedback
 			} else {
-				formStatus = Constants.STATUS.SUBMITTED;
-				referenceStatus = Constants.STATUS.REPLIED;
-			}
-			promiseArray.push(app.models.application.update({
-				id: params.application,
-			}, {
-				form_status: formStatus,
-				reference_status: referenceStatus,
-			}));
-		}
-
-		if (_.get(application, 'value') && _.isEmpty(application.value.feedback)) {
-			promiseArray.push(jobsService.updateJobSlots(app, jobId, params.application));
-		} else {
-			promiseArray.push(app.models.job.findOne(jobId));
-		}
-
-		await Promise.all(promiseArray)
-			.spread((expiredToken, candidate, updatedApplication, job) => res.json({ candidate, job }))
-			.catch((err) => {
-				console.log('Error is ', err);
-				return res.status(500).json({
-					error: err,
+				return res.status(400).json({
+					error: Constants.INVALID_QUERY_PARAMS,
 				});
-			});
+			}
+		} else {
+			const decryptedToken = encryptDecryptService.decrypt(body.token);
+			if (decryptedToken === Constants.APPLICATION_NOT_FOUND) {
+				return res.status(401).json({
+					error: Constants.TOKEN_NOT_VALID,
+				});
+			}
+			const application = await applicationsService.addFeedback(app, params.application, body);
+			const candidateId = application.value && application.value.user_id;
+			const jobId = application.value && application.value.job_id;
+			let canContactReferences = 0;
+			const promiseArray = [];
+			promiseArray.push(app.models.token.update({
+				emailAddress: decryptedToken.emailAddress,
+				applicationId: decryptedToken.applicationId,
+			}, {
+				expired: true,
+			}));
+			promiseArray.push(app.models.profile.findOne({
+				where: { user: candidateId },
+				select: ['firstName', 'lastName', 'emailAddress'],
+			}));
+			if (_.get(application, 'value') && _.get(application, 'value.references_info')) {
+				let formStatus;
+				let referenceStatus;
+				const feedbacks = (_.get(application, 'value.feedback') && (_.size(application.value.feedback) + 1)) || 1;
+				application.value.references_info.forEach((reference) => {
+					if (reference.canContact === 'Yes') {
+						canContactReferences += 1;
+					}
+				});
+				if (feedbacks < canContactReferences) {
+					formStatus = Constants.STATUS.COMPLETE;
+					referenceStatus = Constants.STATUS.REPLIED;
+				} else {
+					formStatus = Constants.STATUS.SUBMITTED;
+					referenceStatus = Constants.STATUS.REPLIED;
+				}
+				promiseArray.push(app.models.application.update({
+					id: params.application,
+				}, {
+					form_status: formStatus,
+					reference_status: referenceStatus,
+				}));
+			}
+
+			if (_.get(application, 'value') && _.isEmpty(application.value.feedback)) {
+				promiseArray.push(jobsService.updateJobSlots(app, jobId, params.application));
+			} else {
+				promiseArray.push(app.models.job.findOne(jobId));
+			}
+
+			await Promise.all(promiseArray)
+				.spread((expiredToken, candidate, updatedApplication, job) => res.json({ candidate, job }))
+				.catch((err) => {
+					console.log('Error is ', err);
+					return res.status(500).json({
+						error: err,
+					});
+				});
+		}
 	},
 
 	/*
